[package]
name = "roadmap-wasm"
version = "0.1.0"
authors = ["Kenriortega <kenriortega@gmail.com>"]
description = "A sample project with wasm-pack on roadmap-wasm"
license = "MIT/Apache-2.0"
repository = "https://github.com/kenriortega/roadmap-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3.55", features = ['console'] }